--- a/PokeBank_Proyecto/html/menu.html
+++ b/PokeBank_Proyecto/html/menu.html
@@ -17,7 +17,7 @@
             <div class="card-body">
                 <div class="row g-3 justify-content-center">
                     <div class="col-12 col-sm-6 col-md-3">
-                        <button class="btn btn-success w-100">Depositar</button>
+                        <a class="btn btn-success w-100" href="deposito.html">Depositar</a>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3">
                         <button class="btn btn-danger w-100">Retirar</button>
