--- a/PokeBank_Proyecto/html/deposito.html
+++ b/PokeBank_Proyecto/html/deposito.html
@@ -58,7 +58,7 @@
                        <button class="btn btn-success w-100">Realizar deposito </button>
                     </div>
                      <div class="mb-3 align-self-center">
-                       <button class="btn btn-success">Regresar</button>
+                       <a href="menu.html" class="btn btn-secondary">Regresar al menú</a>
                     </div>
                 </div>
                 <div class="col-lg-2"></div>
