--- a/PokeBank_Proyecto/html/menu.html
+++ b/PokeBank_Proyecto/html/menu.html
@@ -17,13 +17,18 @@
             <div class="card-body">
                 <div class="row g-3 justify-content-center">
                     <div class="col-12 col-sm-6 col-md-3">
-                        <a class="btn btn-success w-100" href="deposito.html">Depositar</a>
+                        <a href="deposito.html">
+                            <button class="btn btn-success w-100">Depositar</button>
+                        </a>                    
                     </div>
                     <div class="col-12 col-sm-6 col-md-3">
-                        <button class="btn btn-danger w-100">Retirar</button>
-                    </div>
+                        <a href="retiro.html">
+                            <button class="btn btn-danger w-100">Retirar</button>
+                        </a>                    </div>
                     <div class="col-12 col-sm-6 col-md-3">
-                        <button class="btn btn-warning w-100">Pagar Servicios</button>
+                        <a href="pago_servicios.html">
+                            <button class="btn btn-warning w-100">Pago de servicios</button>
+                        </a>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3">
                         <button class="btn btn-info w-100">Consultar Saldo</button>
