Commit 4, modificacion final
El proyecto esta terminado, se hicieron modificaciones parar corroborar el funcionamiento del código hasta ahora

--- a/PokeBank_Proyecto/html/menu.html
+++ b/PokeBank_Proyecto/html/menu.html
@@ -31,7 +31,9 @@
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3">
-                        <button class="btn btn-info w-100">Consultar Saldo</button>
+                        <a href="consultar saldo.html">
+                            <button class="btn btn-info w-100">Consultar Saldo</button>
+                        </a>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3">
                         <a href="historial.html">
