--- a/PokeBank_Proyecto/index.html
+++ b/PokeBank_Proyecto/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Pantalla de Login</title>
 </head>
+
 <body>
 
     <div class="container d-flex justify-content-center align-items-center vh-100">
@@ -16,7 +19,7 @@
             card: crear una tarjeta contenedora
             p-4: añade padding a todos los lados del formulario
             shadow-lg: añade efecto de sombra 
-         -->    
+         -->
         <div class="card p-4 shadow-lg contendio-formulario">
             <form id="loginForm">
                 <div class="text-center">
@@ -30,11 +33,27 @@
             </form>
         </div>
     </div>
-    
-    
-<!--ESPACIO PARA AGREGAR LA ETIQUETA SCRIPT Y VALIDACION DEL PIN - INICIO -->   
 
-<!--ESPACIO PARA AGREGAR LA ETIQUETA SCRIPT Y VALIDACION DEL PIN - FINAL -->
+
+    <!--ESPACIO PARA AGREGAR LA ETIQUETA SCRIPT Y VALIDACION DEL PIN - INICIO -->
+
+    <!--Script hecho en JavaScript para validad el PIN y permitir el ingreso al menu principal -->
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function (event) {
+            event.preventDefault(); //Esta linea evita el envio del formulario vacio
+            //Obtener el valor ingresado del PIN
+            var pin = document.getElementById('pin').value;
+            //Validacion del pin DATO MODO PRUEBA
+            if (pin == '1234') {
+                window.location.href = 'html/menu.html'; //Llevar a la pagina del menu
+            }
+            else {
+                alert('PIN incorrecto. Por favor, verificar e intentar nuevamente');
+            }
+        });
+    </script>
+    <!--ESPACIO PARA AGREGAR LA ETIQUETA SCRIPT Y VALIDACION DEL PIN - FINAL -->
 
 </body>
+
 </html>
