--- a/PokeBank_Proyecto/html/menu.html
+++ b/PokeBank_Proyecto/html/menu.html
@@ -1,56 +1,61 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Menu Principal</title>
-</head>
-<body>
-    <div class="container mt-5">
-        <div class="card shadow-lg">
-            <div class="card-header bg-primary text-white text-center">
-                <h4>Bienvenido, [Nombre Usuario]</h4>
-                <p>Número de Cuenta: [123456]</p>
-            </div>
-            <div class="card-body">
-                <div class="row g-3 justify-content-center">
-                    <div class="col-12 col-sm-6 col-md-3">
-                        <a href="deposito.html">
-                            <button class="btn btn-success w-100">Depositar</button>
-                        </a>                    
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-3">
-                        <a href="retiro.html">
-                            <button class="btn btn-danger w-100">Retirar</button>
-                        </a>                    </div>
-                    <div class="col-12 col-sm-6 col-md-3">
-                        <a href="pago_servicios.html">
-                            <button class="btn btn-warning w-100">Pago de servicios</button>
-                        </a>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-3">
-                        <a href="consultar saldo.html">
-                            <button class="btn btn-info w-100">Consultar Saldo</button>
-                        </a>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-3">
-                        <a href="historial.html">
-                            <button class="btn btn-info w-100">Historial de Transacciones</button>
-                        </a>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-3">
-                        <a href="grafico.html">
-                            <button class="btn btn-info w-100">Grafico de Transacciones</button>
-                        </a>
-                    </div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous" />
+        <link rel="stylesheet" href="../css/style.css" />
+        <title>Menu Principal</title>
+    </head>
+    <body>
+        <div class="container mt-5">
+            <div class="card shadow-lg">
+                <div class="card-header bg-primary text-white text-center">
+                    <h4>Bienvenido, [Nombre Usuario]</h4>
+                    <p>Número de Cuenta: [123456]</p>
                 </div>
-                <div class="mt-4 text-center">
-                    <a href="../index.html" class="btn btn-secondary">Cerrar Sesión</a>
+                <div class="card-body">
+                    <div class="row g-3 justify-content-center">
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <a href="deposito.html">
+                                <button class="btn btn-success w-100">Depositar</button>
+                            </a>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <a href="retiro.html">
+                                <button class="btn btn-danger w-100">Retirar</button>
+                            </a>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <a href="pago_servicios.html">
+                                <button class="btn btn-warning w-100">Pago de servicios</button>
+                            </a>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <a href="consultar_saldo.html">
+                                <button class="btn btn-info w-100">Consultar Saldo</button>
+                            </a>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <a href="historial.html">
+                                <button class="btn btn-info w-100">Historial de Transacciones</button>
+                            </a>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <a href="grafico.html">
+                                <button class="btn btn-info w-100">Grafico de Transacciones</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mt-4 text-center">
+                        <a href="../index.html" class="btn btn-secondary">Cerrar Sesión</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
