--- a/PokeBank_Proyecto/index.html
+++ b/PokeBank_Proyecto/index.html
@@ -1,59 +1,130 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css" />
 
-    <title>Pantalla de Login</title>
-</head>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-<body>
+        <title>Pantalla de Login</title>
+    </head>
 
-    <div class="container d-flex justify-content-center align-items-center vh-100">
-        <!--
+    <body>
+        <div class="container d-flex justify-content-center align-items-center vh-100">
+            <!--
             Clases de Bootstrap utilizadas
             card: crear una tarjeta contenedora
             p-4: añade padding a todos los lados del formulario
             shadow-lg: añade efecto de sombra 
          -->
-        <div class="card p-4 shadow-lg contendio-formulario">
-            <form id="loginForm">
-                <div class="text-center">
-                    <img src="img/PokemonBank.jpg" alt="PokemonBank" class="img-fluid">
-                </div>
-                <div class="mb-3">
-                    <label for="pin" class="form-label">Ingresa tu PIN</label>
-                    <input type="password" id="pin" name="pin" class="form-control" maxlength="4" placeholder="****">
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Iniciar Sesión</button>
-            </form>
+            <div class="card p-4 shadow-lg contendio-formulario">
+                <form id="loginForm">
+                    <div class="text-center">
+                        <img src="img/PokemonBank.jpg" alt="PokemonBank" class="img-fluid" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="pin" class="form-label">Ingresa tu PIN</label>
+                        <input
+                            type="password"
+                            id="pin"
+                            name="pin"
+                            class="form-control"
+                            maxlength="4"
+                            placeholder="****" />
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Iniciar Sesión</button>
+                </form>
+            </div>
         </div>
-    </div>
 
+        <!--VALIDACION USANDO VALIDATEJS Y SWEET ALERT-->
+        <script>
+            (function () {
+                validate.validators.presence.message = "es requerido";
 
-    <!--ESPACIO PARA AGREGAR LA ETIQUETA SCRIPT Y VALIDACION DEL PIN - INICIO -->
+                // These are the constraints used to validate the form
+                var constraints = {
+                    pin: {
+                        // Password is also required
+                        presence: true,
+                        // And must be at least 5 characters long
+                        length: {
+                            minimum: 4,
+                            message: "debe contener 4 numeros"
+                        }
+                    }
+                };
 
-    <!--Script hecho en JavaScript para validad el PIN y permitir el ingreso al menu principal -->
-    <script>
-        document.getElementById('loginForm').addEventListener('submit', function (event) {
-            event.preventDefault(); //Esta linea evita el envio del formulario vacio
-            //Obtener el valor ingresado del PIN
-            var pin = document.getElementById('pin').value;
-            //Validacion del pin DATO MODO PRUEBA
-            if (pin == '1234') {
-                window.location.href = 'html/menu.html'; //Llevar a la pagina del menu
-            }
-            else {
-                alert('PIN incorrecto. Por favor, verificar e intentar nuevamente');
-            }
-        });
-    </script>
-    <!--ESPACIO PARA AGREGAR LA ETIQUETA SCRIPT Y VALIDACION DEL PIN - FINAL -->
+                // Hook up the form so we can prevent it from being posted
+                var form = document.querySelector("form#loginForm");
+                form.addEventListener("submit", function (ev) {
+                    ev.preventDefault();
+                    handleFormSubmit(form);
+                });
 
-</body>
+                // Hook up the inputs to validate on the fly
+                var inputs = document.querySelectorAll("input");
+                for (var i = 0; i < inputs.length; ++i) {
+                    inputs.item(i).addEventListener("change", function (ev) {
+                        var errors = validate(form, constraints) || {};
+                        showErrorsForInput(errors[this.name]);
+                    });
+                }
 
+                function handleFormSubmit(form, input) {
+                    // validate the form against the constraints
+                    var errors = validate(form, constraints);
+                    // then we update the form to reflect the results
+                    showErrors(form, errors || {});
+                    if (!errors) {
+                        showSuccess();
+                    }
+                }
+
+                // Updates the inputs with the validation errors
+                function showErrors(form, errors) {
+                    // We loop through all the inputs and show the errors for that input
+                    _.each(form.querySelectorAll("input[name]"), function (input) {
+                        // Since the errors can be null if no errors were found we need to handle
+                        // that
+                        showErrorsForInput(errors && errors[input.name]);
+                    });
+                }
+
+                // Shows the errors for a specific input
+                function showErrorsForInput(errors) {
+                    if (errors) {
+                        var messageError = "";
+
+                        _.each(errors, function (error) {
+                            messageError = messageError + " " + error;
+                        });
+                        swal("Error", messageError, "error");
+                    }
+                }
+
+                function showSuccess() {
+                    var pin = document.getElementById("pin").value;
+                    //Validacion del pin DATO MODO PRUEBA
+                    if (pin == "1234") {
+                        swal("Exitoso", "El login fue existoso", "success").then((value) => {
+                            window.location.href = "html/menu.html"; //Llevar a la pagina del menu
+                        });
+                    } else {
+                        swal("Error", "PIN incorrecto. Por favor, verificar e intentar nuevamente", "error");
+                    }
+                }
+            })();
+        </script>
+    </body>
 </html>
