--- a/PokeBank_Proyecto/html/historial.html
+++ b/PokeBank_Proyecto/html/historial.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/transaccion.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
     <title>Transacciones</title>
 </head>
@@ -39,9 +40,36 @@
                 </tbody>
             </table>
         </div>
+
+        <!-- Botón para generar comprobante PDF -->
         <div class="text-center mt-4">
-            <a href="menu.html" class="btn btn-secondary">Regresar al menu</a>
+            <button id="descargarPDF" class="btn btn-primary">Generar comprobante PDF</button>
+            <a href="menu.html" class="btn btn-secondary">Regresar al menú</a>
         </div>
     </div>
+
+    <script>
+        document.getElementById("descargarPDF").addEventListener("click", function () {
+            const { jsPDF } = window.jspdf;
+            const doc = new jsPDF();
+
+            doc.text("Historial de Transacciones - Pokémon Bank", 10, 10);
+            
+            const filas = document.querySelectorAll("tbody tr");
+            let y = 30;
+            
+            filas.forEach(fila => {
+                const columnas = fila.querySelectorAll("td");
+                const tipo = columnas[0].textContent;
+                const monto = columnas[1].textContent;
+                const fecha = columnas[2].textContent;
+
+                doc.text(`Tipo: ${tipo}, Monto: ${monto}, Fecha: ${fecha}`, 10, y);
+                y += 10;
+            });
+
+            doc.save("comprobante-transacciones.pdf");
+        });
+    </script>
 </body>
 </html>
