--- a/PokeBank_Proyecto/html/historial.html
+++ b/PokeBank_Proyecto/html/historial.html
@@ -64,7 +64,7 @@
                 const monto = columnas[1].textContent;
                 const fecha = columnas[2].textContent;
 
-                doc.text(`Tipo: ${tipo}, Monto: ${monto}, Fecha: ${fecha}`, 10, y);
+                doc.text(`Tipo de Transacción: ${tipo}, Monto: ${monto}, Fecha: ${fecha}`, 10, y);
                 y += 10;
             });
 
